# TeamProject_PyCore

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
cli_assistant/: README.md  address_book_classes.py  assistant.py  birthday_class.py  clean_folder.py  currency.py  exceptions.py  help_invite.py  logger_.py  note_book_classes.py  show_info.py  task_list.py  task_list_classes.py
