[tool.poetry]
name = "assistant-ota"
version = "0.1.0"
description = "CLI Assistant helps to manage the address book, notes, task book, organizes file in folder"
authors = ["OleksandrGnatiuk <oleksandr.gnatiuk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "assistant_ota"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.36"
pyttsx3 = "^2.90"
requests = "^2.28.2"
markdown = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
